--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 	"author": "Samar Badriddinov",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"mongoose": "^8.3.4",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
