--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"express-fileupload": "^1.5.0",
 		"mongoose": "^8.3.4",
 		"uuid": "^9.0.1"
 	},
