--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "Samar Badriddinov",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-fileupload": "^1.5.0",
