--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-fileupload": "^1.5.0",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.3.4",
 		"uuid": "^9.0.1"
 	},
