--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
 	"dependencies": {
 		"bcrypt": "^5.1.1",
 		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-fileupload": "^1.5.0",
+		"express-validator": "^7.0.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.3.4",
 		"nodemailer": "^6.9.13",
