--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.4.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.2",
     "axios": "^1.6.8",
